# resonantstate

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  sample_conversion.py  test.py
nbs/: notebook_obs_analysis.ipynb  notebook_observations.ipynb  notebook_simulations.ipynb
src/ResonantState/: Kepler-54_2_samples.csv  analyse_samples.py  continuedSeparatrix.txt  data_download.py  ell2SFM.py  readmeContinuedSeparatrix.txt  sample_conversion.py  table_entries_catalogs.py
src/resonantstate/: Kepler-60_2_samples.csv  _sample_conversion_sanity_checks.py  analyse_samples.py  data_download.py  data_download_bk.py  data_download_testlocal.py  ell2SFM.py  readmeContinuedSeparatrix.txt  sample_conversion.py  simulations_resonance_analysis.py  table_entries_catalogs.py  ttv.py
src/resonantstate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
